--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>title</title>
+    <meta http-equiv="refresh" content="0; url='xmas2021.html'" />
   </head>
   <body>
-		<h1>Hello</h1>
+    <p>Please follow <a href="xmas2021.html">this link</a>.</p>
   </body>
 </html>
