Update lake daniell description

--- a/xmas2021lakedaniell.html
+++ b/xmas2021lakedaniell.html
@@ -182,7 +182,7 @@ var fvpdata = {"nonce":"c1e69ff1b4","fitvids":"1","dynamic":"","overlay":"","opa
 
 							<h3 style="margin-top: 2em">Tramp info</h3>
 												
-							<p>The Lake Daniell route is flat in most places, with some gentle hills that overall add up to about 150m of rise from the car park to the Kowhanga Atawhai - Manson Nichols Hut.  Total distance is 7.6km, all through a beautiful beech forest, with walking time of around 3h.</p>  
+							<p>The Lake Daniell route is flat in most places, with some gentle hills that overall add up to about 150m of rise from the car park to the Kowhanga Atawhai - Manson Nichols Hut.  The distance one way is 7.6km, all through a beautiful beech forest, with walking time of around 3h.</p>  
 									
 							<p><div class="map_container">
 							<p class="map"><button id="map_btn">Satellite</button></p>
