--- a/xmas2021.html
+++ b/xmas2021.html
@@ -244,11 +244,11 @@
 
 
             </div>
-            <!--<nav class="pagination">
-					<div class="nav-previous pad-1">
-						<a href="index.php/page/2/index.html" >Older Posts</a>
-					</div>
-				</nav>-->
+            <nav class="pagination">
+                <div class="nav-next pad-1">
+                    <a href="https://lechszym.github.io/xmas2022/xmas2022.html" >Xmas 2022&nbsp;&rarr;</a>
+                </div>
+			</nav>
         </main>
     </div>
     <!-- .wrapper -->
